[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Graphics/Level 1/sky.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Level 1/clouds.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Levels/Level1/pass through tileset.tres" type="TileSet" id=4]
[ext_resource path="res://Assets/Levels/Level1/world_tileset.tres" type="TileSet" id=5]
[ext_resource path="res://Assets/Items/Coin/Coin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Graphics/Items/Coin/Pull Request.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Assets/Levels/Level1/HUD.gd" type="Script" id=9]
[ext_resource path="res://Assets/Characters/Enemy/Ghost/Ghost.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Audio/Level Music.WAV" type="AudioStream" id=11]
[ext_resource path="res://Assets/Levels/Level1/Level1.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 15.2484 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 160, 16 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 2209, 10 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.25098 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.25098 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=8]
size = 36
outline_size = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=9]
size = 55
outline_size = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=11]
size = 36
outline_size = 3
font_data = ExtResource( 8 )

[node name="Level 1" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 12 )

[node name="Tiles Solid" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( -589825, 0, 0, -524289, 0, 0, -589765, 0, 0, -458753, 0, 0, -524229, 0, 0, -393217, 0, 0, -458693, 0, 0, -327681, 0, 0, -393157, 0, 0, -262145, 0, 0, -327621, 0, 0, -196609, 0, 0, -262085, 0, 0, -131073, 0, 0, -196549, 0, 0, -65537, 0, 0, -131013, 0, 0, -1, 0, 0, -65477, 0, 0, 65535, 0, 0, 59, 0, 0, 131071, 0, 0, 65552, 1, 0, 65553, 3, 0, 65595, 0, 0, 196607, 0, 0, 131081, 1, 0, 131082, 3, 0, 131131, 0, 0, 262143, 0, 0, 196667, 0, 0, 327679, 0, 0, 262156, 1, 0, 262157, 3, 0, 262163, 1, 0, 262164, 2, 0, 262165, 3, 0, 262181, 1, 0, 262182, 2, 0, 262183, 2, 0, 262184, 3, 0, 262203, 0, 0, 393215, 0, 0, 327690, 1, 0, 327691, 3, 0, 327723, 1, 0, 327724, 2, 0, 327725, 2, 0, 327726, 2, 0, 327727, 3, 0, 327739, 0, 0, 458751, 0, 0, 393275, 0, 0, 524287, 0, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 2, 0, 458760, 2, 0, 458761, 2, 0, 458762, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 2, 0, 458777, 2, 0, 458778, 2, 0, 458779, 2, 0, 458780, 2, 0, 458781, 2, 0, 458782, 2, 0, 458783, 2, 0, 458784, 2, 0, 458787, 1, 0, 458788, 2, 0, 458789, 3, 0, 458802, 2, 0, 458803, 2, 0, 458804, 2, 0, 458805, 2, 0, 458806, 2, 0, 458807, 2, 0, 458808, 2, 0, 458809, 2, 0, 458810, 2, 0, 458811, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524317, 0, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 0, 0, 524344, 0, 0, 524345, 0, 0, 524346, 0, 0, 524347, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0 )

[node name="Tiles One Way" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( 65539, 2, 0, 65540, 2, 0, 65541, 2, 0, 65542, 2, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131099, 2, 0, 131100, 2, 0, 131101, 2, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196635, 0, 0, 196636, 0, 0, 196637, 0, 0, 196660, 2, 0, 196661, 2, 0, 196662, 2, 0, 262147, 2, 0, 262148, 2, 0, 262149, 2, 0, 262150, 2, 0, 262151, 1, 0, 262171, 2, 0, 262172, 2, 0, 262173, 2, 0, 262196, 0, 0, 262197, 0, 0, 262198, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327732, 0, 0, 327733, 0, 0, 327734, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393242, 2, 0, 393243, 2, 0, 393244, 2, 0, 393245, 2, 0, 393246, 2, 0, 393268, 2, 0, 393269, 2, 0, 393270, 2, 0, 393271, 2, 0, 393272, 2, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="Tiles One Way"]
collision_layer = 2
collision_mask = 49

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 320, 80 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 352, 272 )
shape = SubResource( 2 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 1825, 144 )
shape = SubResource( 3 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 1825, 400 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 1825, 272 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 3425, 208.671 )
shape = SubResource( 12 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Tiles One Way/StaticBody2D"]
position = Vector2( 3489, 399.92 )
shape = SubResource( 13 )
one_way_collision = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1088, 672 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Sky"]
position = Vector2( -32, -96 )
scale = Vector2( 17, 10.5 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds Far" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.878431, 0.878431, 0.878431, 1 )
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 512, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds Far"]
position = Vector2( 0, 112 )
texture = ExtResource( 2 )
centered = false

[node name="Clouds Near" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.8, 0.8 )
motion_mirroring = Vector2( 512, 512 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Clouds Near"]
position = Vector2( -32, -96 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="FallZone" type="Area2D" parent="."]
position = Vector2( 992, 672 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallZone"]
shape = SubResource( 6 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="PRPanel" type="Panel" parent="HUD"]
margin_left = 16.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScorePanel" type="Panel" parent="HUD"]
margin_left = 768.0
margin_top = 16.0
margin_right = 1007.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 24.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 72.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinX" type="Label" parent="HUD"]
margin_left = 64.0
margin_top = 16.0
margin_right = 96.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.364706, 0.0196078, 1 )
text = "x"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsCount" type="Label" parent="HUD"]
margin_left = 93.865
margin_top = 16.0
margin_right = 173.865
margin_bottom = 83.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.364706, 0.0196078, 1 )
text = "xx"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCount" type="Label" parent="HUD"]
margin_left = 880.0
margin_top = 16.0
margin_right = 996.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 0.364706, 0.0196078, 1 )
text = "8888"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemys" type="Node2D" parent="."]

[node name="Ghosts" type="Node2D" parent="Enemys"]

[node name="Ghost1" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 241, -16 )
direction = 1

[node name="Ghost2" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 384, 181.662 )
detects_clifs = false

[node name="Ghost3" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 320, 373.662 )
direction = 1

[node name="Ghost4" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 1313, 143.248 )
direction = 1

[node name="Ghost5" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 817, 208.671 )
direction = 1

[node name="Ghost6" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 1601, 320 )
direction = 1

[node name="Ghost7" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 1809, 196.991 )
direction = 1

[node name="Ghost8" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 2497, 223.248 )
direction = 1

[node name="Ghost9" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 2865, 256 )
direction = 1

[node name="Ghost10" parent="Enemys/Ghosts" instance=ExtResource( 10 )]
position = Vector2( 3713, 400.671 )
direction = 1

[node name="Items" type="Node2D" parent="."]

[node name="Coins" type="Node2D" parent="Items"]

[node name="Coin1" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 257, 207.92 )

[node name="Coin2" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 321, 16 )

[node name="Coin3" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 640, 80 )

[node name="Coin4" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 705, 272 )

[node name="Coin5" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 849, 208 )

[node name="Coin6" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1089, 16 )

[node name="Coin13" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1361, 207.248 )

[node name="Coin14" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1265, 208 )

[node name="Coin7" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1504, 400 )

[node name="Coin11" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1825, 80 )

[node name="Coin12" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2097, 400 )

[node name="Coin8" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1889, 336 )

[node name="Coin9" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1761, 336 )

[node name="Coin10" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 1825, 336 )

[node name="Coin19" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3009, 272 )

[node name="Coin20" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2913, 272 )

[node name="Coin15" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2817, 272 )

[node name="Coin16" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2545, 208 )

[node name="Coin17" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2305, 400 )

[node name="Coin18" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 2433, 208 )

[node name="Coin23" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3569, 336 )

[node name="Coin24" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3473, 336 )

[node name="Coin25" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3377, 336 )

[node name="Coin21" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3473, 144 )

[node name="Coin22" parent="Items/Coins" instance=ExtResource( 6 )]
position = Vector2( 3393, 144 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 125.865, 417.193 )
collision_mask = 31

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 2, 0 )
current = true
limit_left = 0
limit_top = -128
limit_right = 3776
limit_bottom = 512
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_right = 0.3

[node name="MusicLevel1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
[connection signal="body_entered" from="FallZone" to="Player" method="_on_FallZone_body_entered"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost1" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost2" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost3" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost4" to="HUD" method="_on_Ghost_enemy_killedd"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost5" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost6" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost7" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost8" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost9" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="enemy_killed" from="Enemys/Ghosts/Ghost10" to="HUD" method="_on_Ghost_enemy_killed"]
[connection signal="coin_collected" from="Items/Coins/Coin1" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin2" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin3" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin4" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin5" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin6" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin13" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin14" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin7" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin11" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin12" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin8" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin9" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin10" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin19" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin20" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin15" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin16" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin17" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin18" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin23" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin24" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin25" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin21" to="HUD" method="_on_coin_collected"]
[connection signal="coin_collected" from="Items/Coins/Coin22" to="HUD" method="_on_coin_collected"]
